app/assets/stylesheets/articles.css.scss
.articles {
    background-color: rgba(245, 226, 146, .2);
    background-image: image-url('striped_bg.png');
    background-repeat: repeat;
    background-size: 6px 6px;
    
    &.single {
        .wrapper {
            height: 83%;
            
            .article {
                height: 100%;
            }
            
            .content {
                height: 93%;
                margin-right: 15px;
                min-height: 280px;
            }
        }
    }
    
    &.paginated {
        .wrapper {
            height: auto;
        }
    }

    h1 {
        color: #e99924;
        background: #3a0e15;
        background-color: rgba(58, 14, 21, 0.9);
        box-shadow: 3px 3px 0 rgba(48, 35, 21, .8);
        border: 1px solid #864a4c;
        border: 1px solid rgba(255, 155, 155, .45);
        border-radius: 6px;
        margin-top: 0;
        padding: 15px 28px;
    }

    .wrapper {
        min-height: 310px;
        background: #927f6d;
        background-color: rgba(146, 127, 109, .9);
        box-shadow: 3px 3px 0 rgba(48, 35, 21, .8), inset 0 0 20px rgba(48, 35, 21, .8);
        border: 1px solid #c5b09d;
        border-radius: 6px;
        word-wrap: break-word;
        overflow: hidden;
        
        .article {
            display: table;
            width: 100%;
        }
        
        .article-section {
            display: table-row;
            
            &:first-child {
                .article-section-wrap {
                    height: 44px;
                }
            }
        }
        
        .article-section-wrap {
            display: table-cell;
        }

        a.title {
            display: block;
            background: #554540;
            background-color: rgba(0, 0, 0, .4);
            padding: 10px 20px;
            
            h2, h3 {
                margin: 0;
                line-height: 23px;
                color: #e99924;
                text-decoration: none;

                &:before {
                    padding-right: 10px;
                }
            }
        }

        .content {
            position: relative;
            text-align: justify;
            margin: 10px 20px 15px 20px;
            
            img {
                border: 4px solid #fff;
                border-radius: 4px;
            }

            .scroll-wrap {
                position: absolute;
                top: 0;
                bottom: 0;
                left: 0;
                right: 0;
                overflow: hidden;
            }

            .scrollable {
                height: 100%;
                overflow: auto;
            }
        }
    }

    .pagination{
        float: right;
        background: #3a0e15;
        background-color: rgba(58, 14, 21, .9);
        border: 1px solid #864a4c;
        border: 1px solid rgba(255, 155, 155, .45);
        box-shadow: 3px 3px 0 rgba(48, 35, 21, .8);
        padding: 8px;
        margin-bottom: 0;
    }

    .page, .first, .prev, .next, .last {
        margin-right: 8px;
    }

    .page {
        display: inline-block;
        padding: 0;
        border-radius: 3px;
        border: 1px solid #86001d;
        background: #5f0015;
        box-shadow: inset 0px -10px 15px rgba(0, 0, 0, 0.4), 0px -10px 15px rgba(0, 0, 0, .1);
        font-size: 0.9em;
        font-weight: bold;
        text-decoration: none;
        color: #717171;

        &:hover, &.current {
            color: #ff8;
            border: 1px solid #3a0e15;
            background: #3a0e15;
            box-shadow: inset 0px 0px 8px rgba(0, 0, 0, .5), 1px 1px 0px rgba(158, 59, 59, .8);
        }
        
        &:hover a {
            color: #ff8;
        }

        &.current {
            text-shadow: 0px 0px 3px rgba(0,0,0, .5);
            padding: 0px 10px;
        }
        
        a {
            padding: 0px 10px;
        }
    }

    .pagination > span > a {
        color: #e99924;
        text-decoration: none;
        text-transform: capitalize;

        &:hover {
            color: #ff8;
        }
    }
}

